<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The OmiROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Device Settings</string>

    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <string name="category_tvout_title">TV</string>
    <string name="tvout_enable_head">TV Out</string>
    <string name="tvout_enable_summary_nocable">TV Out cable not connected</string>
    <string name="tvout_enable_summary">TV Out cable connected, check to enable</string>
    <string name="tvout_enable_summary_on">TV Out enabled</string>
    <string name="tvout_system_head">TV System</string>
    <string name="tvout_system_summary">Set your TV system for TV Out</string>
    <string name="hdmi_dock_summary_nodock">HDMI dock not connected</string>
    <string name="hdmi_dock_summary">HDMI dock connected, check to enable</string>
    <string name="hdmi_dock_summary_on">HDMI dock enabled</string>
    <string name="hdmi_dock_head">HDMI Dock</string>

    <string name="category_buttons_title">Buttons</string>
    <string name="category_capacitive_buttons_title">Capacitive buttons</string>
    <string name="capacitive_buttons_title">Disable Capacitive Buttons</string>
    <string name="capacitive_buttons_summary">Disable hard capacitive button lights and touches (Including notifications)</string>
    <string name="backlight_timeout_title_head">Backlight Timeout</string>
    <string name="backlight_timeout_summary_head">Adjust the delay before the touch key backlight automatically turns off</string>

    <string name="category_speed_title">Speed</string>
    <string name="touchscreen_clock_title">Touchscreen Clock Speed</string>

    <string name="category_zram_title">Memory</string>
    <string name="zram_disable_title">Disable Zram</string>
    <string name="zram_disable_summary">Disable Zram Swap Memory (requires a reboot)</string>
    <string name="zram_num_device_title">Zram Devices</string>
    <string name="zram_num_device_summary">This creates n Zram devices: /dev/block/zram{0,1,2,3,4} (requires a reboot)</string>
    <string name="zram_comp_stream_title">Compression Streams</string>
    <string name="zram_comp_stream_summary">Set max number of compression streams (requires a reboot)</string>
    <string name="zram_comp_algorithm_title">Compression Algorithm</string>
    <string name="zram_comp_algorithm_summary">Set Compression Algorithm (requires a reboot)</string>
    <string name="zram_disk_size_title">Zram Disk Size</string>
    <string name="zram_disk_size_summary">Set Zram Disk Size (requires a reboot)</string>

    <string name="category_vibrator_tuning_title">Vibration</string>
    <string name="vibrator_tuning_title_head">Vibrator feedback tuning</string>
    <string name="vibrator_tuning_summary_head">Controls the default power of vibrator feedback</string>
    <string name="vibrator_title">Vibration %</string>
    <string name="vibrator_default_title">Default</string>
    <string name="vibrator_test_title">Test</string>

    <!-- Used for activity title. Usually not visible, except on the
         multi-task screen -->
    <string name="generic_warning_title">Warning</string>

    <!-- Invalid IMEI -->
    <string name="imei_not_sane_title">Warning!</string>
    <string name="imei_not_sane_message">A problem was detected with your device. Your device IMEI number is invalid. An invalid IMEI number could cause network issues including the inability to call emergency numbers.</string>
    <string name="imei_not_sane_ok">OK</string>
</resources>
